--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Aziz Shamim's Git Achievements <img src='http://www.gravatar.com/avatar/e7e0385c2168e773d80fdccb2b8dd4b8'/></h2>
-Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 402 points<br>
+Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 407 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -78,6 +78,7 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Investigator (Level 4)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Locksmith (Level 4)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -108,38 +109,39 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-20340 branch
-1292 status
- 560 add
- 408 commit
- 320 checkout
- 299 push
- 214 rebase
- 156 fetch
- 140 diff
-  91 log
-  56 stash
-  45 remote
-  31 reset
-  29 submodule
+21962 branch
+1394 status
+ 614 add
+ 433 commit
+ 347 checkout
+ 327 push
+ 235 rebase
+ 170 fetch
+ 146 diff
+ 104 log
+  59 stash
+  49 remote
+  32 reset
+  30 submodule
   23 config
-  18 rm
+  20 rm
   17 gc
+  17 clone
+  16 mv
+  16 blame
   15 help
-  15 clone
-  15 blame
   12 !git
-  10 mv
+  10 fsck
    9 achievements
    8 show-ref
-   8 fsck
    6 init
-   5 alias
+   6 alias
+   4 merge
    3 shortlog
-   2 pull
+   3 pull
    2 prune
-   2 merge
    2 count-objects
+   2 --version
    1 tag
    1 revert
    1 reflog
@@ -147,7 +149,6 @@ Git commands sorted by usage:
    1 clean
    1 Wed
    1 Sat
-   1 --version
 </pre>
 <script type="text/javascript">
 function showLocked() {
