--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Aziz Shamim's Git Achievements <img src='http://www.gravatar.com/avatar/e7e0385c2168e773d80fdccb2b8dd4b8'/></h2>
-Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 417 points<br>
+Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 420 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -62,6 +62,7 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Thug (Level 2)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Apprentice Thug (Level 3)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Apprentice Tree Trimmer (Level 1)</div>  <div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
+<li><div class="title">Apprentice Tree Trimmer (Level 2)</div>  <div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -111,16 +112,16 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-23671 branch
-1481 status
+23682 branch
+1482 status
  649 add
  456 commit
  362 checkout
  343 push
  236 rebase
- 174 fetch
+ 175 fetch
  154 diff
- 132 log
+ 133 log
   60 stash
   54 remote
   34 reset
@@ -128,8 +129,8 @@ Git commands sorted by usage:
   24 rm
   23 config
   20 help
+  19 clone
   18 mv
-  18 clone
   17 gc
   17 blame
   13 !git
@@ -141,6 +142,7 @@ Git commands sorted by usage:
    6 pull
    5 merge
    3 shortlog
+   3 filter-branch
    2 prune
    2 count-objects
    2 clean
@@ -149,7 +151,6 @@ Git commands sorted by usage:
    1 revert
    1 reflog
    1 ls-files
-   1 filter-branch
    1 Wed
    1 Sat
 </pre>
